--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "publish:next": "yarn publish:prepare; yarn publish dist/core --tag next; yarn publish dist/clr-ui --tag next; yarn publish dist/clr-angular --tag next; yarn publish dist/clr-icons --tag next",
     "publish:rc": "yarn publish:prepare; yarn publish dist/core --tag rc; yarn publish dist/clr-ui --tag rc; yarn publish dist/clr-angular --tag rc; yarn publish dist/clr-icons --tag rc",
     "publish:local": "yarn publish:prepare; yarn publish dist/core --registry http://localhost:4873; yarn publish dist/clr-ui --registry http://localhost:4873; yarn publish dist/clr-angular --registry http://localhost:4873; yarn publish dist/clr-icons --registry http://localhost:4873",
+    "website:start": "yarn --cwd apps/website start",
+    "website:build": "yarn --cwd apps/website build",
     "angular:build": "yarn --cwd packages/angular run build",
     "angular:test": "yarn --cwd packages/angular run test",
     "angular:test:watch": "yarn --cwd packages/angular run test:watch",
