--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "publish:rc": "yarn publish:prepare; yarn publish dist/core --tag rc; yarn publish dist/clr-ui --tag rc; yarn publish dist/clr-angular --tag rc; yarn publish dist/clr-icons --tag rc",
     "publish:local": "yarn publish:prepare; yarn publish dist/core --registry http://localhost:4873; yarn publish dist/clr-ui --registry http://localhost:4873; yarn publish dist/clr-angular --registry http://localhost:4873; yarn publish dist/clr-icons --registry http://localhost:4873",
     "website:start": "yarn --cwd apps/website start",
-    "website:build": "yarn --cwd apps/website build",
+    "website:build": "yarn --cwd packages/angular run build-storybook; yarn --cwd apps/website build",
     "website:deploy": "scripts/website.sh",
     "angular:build": "yarn --cwd packages/angular run build",
     "angular:test": "yarn --cwd packages/angular run test",
@@ -65,8 +65,7 @@
     "core:test": "yarn --cwd packages/core run test",
     "core:test:watch": "yarn --cwd packages/core run test:watch",
     "core:lint": "yarn --cwd packages/core run lint",
-    "core:dev:build": "yarn --cwd packages/core run dev:build",
-    "website:build": "yarn --cwd packages/angular run build-storybook; yarn --cwd apps/website run build"
+    "core:dev:build": "yarn --cwd packages/core run dev:build"
   },
   "devDependencies": {
     "@commitlint/cli": "8.0.0",
